add more time options

--- a/index.html
+++ b/index.html
@@ -58,7 +58,34 @@
                 <option value="7">7 seconds each</option>
                 <option value="8">8 seconds each</option>
                 <option value="9">9 seconds each</option>
-                <option value="10">10 second each</option>
+                <option value="10">10 seconds each</option>
+                <option value="11">11 seconds each</option>
+                <option value="12">12 seconds each</option>
+                <option value="13">13 seconds each</option>
+                <option value="14">14 seconds each</option>
+                <option value="15">15 seconds each</option>
+                <option value="16">16 seconds each</option>
+                <option value="17">17 seconds each</option>
+                <option value="18">18 seconds each</option>
+                <option value="19">19 seconds each</option>
+                <option value="20">20 seconds each</option>
+                <option value="25">25 seconds each</option>
+                <option value="30">30 seconds each</option>
+                <option value="35">35 seconds each</option>
+                <option value="40">40 seconds each</option>
+                <option value="45">45 seconds each</option>
+                <option value="50">50 seconds each</option>
+                <option value="55">55 seconds each</option>
+                <option value="60">60 seconds each</option>
+                <option value="120">2 minutes each</option>
+                <option value="180">3 minutes each</option>
+                <option value="240">4 minutes each</option>
+                <option value="300">5 minutes each</option>
+                <option value="360">6 minutes each</option>
+                <option value="420">7 minutes each</option>
+                <option value="480">8 minutes each</option>
+                <option value="540">9 minutes each</option>
+                <option value="600">10 minutes each</option>
               </select>
             </div>
           </div>
@@ -93,6 +120,19 @@
                   <option value="8">8 seconds of cooldown</option>
                   <option value="9">9 seconds of cooldown</option>
                   <option value="10" selected>10 seconds of cooldown</option>
+                  <option value="15">15 seconds of cooldown</option>
+                  <option value="30">30 seconds of cooldown</option>
+                  <option value="45">45 seconds of cooldown</option>
+                  <option value="60">60 seconds of cooldown</option>
+                  <option value="120">2 minutes of cooldown</option>
+                  <option value="180">3 minutes of cooldown</option>
+                  <option value="240">4 minutes of cooldown</option>
+                  <option value="300">5 minutes of cooldown</option>
+                  <option value="360">6 minutes of cooldown</option>
+                  <option value="420">7 minutes of cooldown</option>
+                  <option value="480">8 minutes of cooldown</option>
+                  <option value="520">9 minutes of cooldown</option>
+                  <option value="600">10 minutes of cooldown</option>
                 </select>
               </div>
             </div>
