add more repetitions options

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                 <option value="8">8 times</option>
                 <option value="9">9 times</option>
                 <option value="10">10 times</option>
+                <option value="11">11 times</option>
+                <option value="12">12 times</option>
+                <option value="13">13 times</option>
+                <option value="14">14 times</option>
+                <option value="15">15 times</option>
+                <option value="16">16 times</option>
+                <option value="17">17 times</option>
+                <option value="18">18 times</option>
+                <option value="19">19 times</option>
+                <option value="20">20 times</option>
+
               </select>
             </div>
             <div class="form-group col-6">
